Solaris Studio 12.4 C++ 5.13, CHECK_UNHANDLED_OOPS use of class oop's copy constructor definitions causing error level diagnostic

XMLWordPrintable

    • b19

        Issue with CHECK_UNHANDLED_OOPS copy constructor definitions:

        "<directory>/src/share/vm/classfile/javaClasses.hpp", line 1183: Error: Initializing const volatile oop& requires an lvalue.
        "<directory>/src/share/vm/classfile/javaClasses.hpp", line 1183: Error: Formal argument o of type const volatile oop& in call to oop::oop(const volatile oop&) is being passed volatile oop.
        2 Error(s) detected.

              Assignee:
              Lois Foltan
              Reporter:
              Lois Foltan
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: