8041623: Solaris Studio 12.4 C++ 5.13, CHECK_UNHANDLED_OOPS use of class oop's copy constructor definitions causing error level diagnostic

Fix several minor compilation issues with volatile oops for CHECK_UNHANDLED_OOPS support.

Reviewed-by: coleenp, hseigel